# agent-hook-runner

./: .gitignore  README.md  codex-hooks.json  pyproject.toml  workflow.yaml
.codex/: hooks.json
src/agents_hook_runner/: __init__.py  cli.py
tests/: test_cli.py
tests/fixtures/: failing-codex-stop-workflow.yaml  passing-codex-stop-workflow.yaml
