[project]
name = "agents-hook-runner"
version = "0.1.0"
description = "Minimal YAML-driven hook runner for local Codex workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agents-hook-runner = "agents_hook_runner:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pyright>=1.1.408",
    "ruff>=0.15.10",
]
